# GW2Overlay

./: README.md
src/: .clang-format  CMakeLists.txt  launch.sh
src/helper/: mumble.py  mumble_helper.cpp
src/overlay/: GW2Object.cpp  GW2Object.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  QtMain.cpp  SDLMain.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h
src/overlay/gl/: GLMesh.cpp  GLMesh.h  GLTexture.cpp  GLTexture.h
src/overlay/qt/: CategoryTreeModel.cpp  CategoryTreeModel.h  NewBuildDialog.ui  OptionsIcon.cpp  OptionsIcon.h  OptionsWindow.cpp  OptionsWindow.h  OptionsWindow.ui  TraitLineWidget.h
src/overlay/renderer/: GLRenderer.cpp  GLRenderer.h  Renderer.h  VKRenderer.h  main.cpp
src/overlay/renderer/gl/: GLMesh.cpp  GLMesh.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h
src/overlay/renderer/vk/: VKCommon.cpp  VKCommon.h  VKMesh.cpp  VKMesh.h  VKObject.cpp  VKObject.h  VKShader.cpp  VKShader.h  VKTexture.cpp  VKTexture.h  VulkanPipeline.cpp  VulkanPipeline.h
src/overlay/renderer/vk/shader/: flat.vert  normal.vert  shader.frag  shader.vert
src/overlay/vk/: main.cpp  main_validate.cpp
src/py/: example.py  main.py  mumble.py
src/ui/: Mesh.cpp  Mesh.h  Object.cpp  Object.h  QtMain.cpp  QtMain.h  SDLMain.cpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/ui/qt/: OptionsIcon.cpp  OptionsIcon.h  OptionsWindow.cpp  OptionsWindow.h
src/ui/vk/: main.cpp
src/utils/: CategoryManager.cpp  CategoryManager.h  Config.cpp  Config.h  FileHelper.h  GW2Api.cpp  GW2Api.h  GW2Link.cpp  GW2Link.h  GW2Map.cpp  GW2Mumble.cpp  Lock.h  POI.cpp  POI.h  PerformanceStats.cpp  PerformanceStats.h  ProcessUtils.h  TacoLoader.cpp  TacoLoader.h  Trail.h  base64.h
src/utils/GW2/: GW2Achievements.cpp  GW2Achievements.h  GW2Api.cpp  GW2Api.h  GW2Builds.h  GW2Link.cpp  GW2Link.h  GW2Manager.cpp  GW2Manager.h  GW2Map.cpp  GW2Map.h  GW2Utils.cpp  GW2Utils.h  GW2WvW.cpp  GW2WvW.h
